Ana sayfa Eklendi

--- a/src/main/resources/static/login/login.html
+++ b/src/main/resources/static/login/login.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <title>Giris Sayfasi</title>
     <link rel="stylesheet" href="login.css">
     <script src="login.js"></script>
@@ -20,7 +21,7 @@
             <div>
                 <button class="submit" onclick="giris()">Log in</button>
                 <a href="#">Lost your password?</a>
-                <a href="newuser/NewUser.html">Register</a>
+                <a href="/newuser/NewUser.html">Register</a>
             </div>
         </div><!-- form -->
     </section><!-- content -->
