--- a/src/main/resources/static/newuser/NewUser.html
+++ b/src/main/resources/static/newuser/NewUser.html
@@ -11,7 +11,7 @@
 <table class="tbl">
     <tr>
         <td>Ad</td>
-        <td><input id="Ad" value="ad"></td>
+        <td><input id="Ad" value=""></td>
 
     </tr>
     <tr>
@@ -20,6 +20,7 @@
 
     </tr>
     <tr>
+
         <td>Kullanici Adi</td>
         <td><input id="kullanici"></td>
 
@@ -36,6 +37,11 @@
     </tr>
 
 </table>
-<button onclick="YeniKullaniciKaydi()">Kaydet</button>
+<table>
+    <td><button onclick="YeniKullaniciKaydi()">Kaydet</button></td>
+    <td><div id="kayit"></div></td>
+
+</table>
+
 </body>
 </html>
