--- a/src/main/resources/static/login/login.html
+++ b/src/main/resources/static/login/login.html
@@ -20,7 +20,7 @@
             </div>
             <div>
                 <button class="submit" onclick="giris()">Log in</button>
-                <a href="#">Lost your password?</a>
+                <a href="/login/lostpasword.html">Lost your password?</a>
                 <a href="/newuser/NewUser.html">Register</a>
             </div>
         </div><!-- form -->
